--- a/backend/frontend/src/components/Nav/navbar.css
+++ b/backend/frontend/src/components/Nav/navbar.css
@@ -1,7 +1,10 @@
-.input-search{
-    /* width: 300px; */
+.navbar-custom-css{
+    max-height: 70px;
+    min-height: 70px;
 }
 
 .logo-text{
     font-size: 30px;
+    text-decoration: none;
+    color: black;
 }
