--- a/backend/frontend/src/components/CompanyPage/carousel.css
+++ b/backend/frontend/src/components/CompanyPage/carousel.css
@@ -1,25 +1,3 @@
-.custom-carousel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 200px; /* Adjust height as needed */
-    overflow: hidden;
+.custom-carousel-item{
     position: relative;
-  }
-  
-  .carousel-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-  }
-  
-  .carousel-item.active {
-    opacity: 1;
-  }
+}
