refactor custom hooks, useSummaryData

--- a/backend/frontend/src/components/CompanyPage/CompanyNav/companyNav.css
+++ b/backend/frontend/src/components/CompanyPage/CompanyNav/companyNav.css
@@ -1,5 +1,5 @@
 #company-nav{
-    border-bottom: 2px solid rgb(180, 180, 180);
+    /* border-bottom: 2px solid rgb(180, 180, 180); */
 }
 
 .company-nav-active{
