fix overview data

--- a/backend/frontend/src/components/CompanyPage/CompanyNav/companyNav.css
+++ b/backend/frontend/src/components/CompanyPage/CompanyNav/companyNav.css
@@ -1,5 +1,8 @@
-#company-nav{
-    /* border-bottom: 2px solid rgb(180, 180, 180); */
+.company-nav-container{
+    position: sticky;
+    z-index: 1;
+    top: 70px;
+    background-color: white;
 }
 
 .company-nav-active{
