--- a/backend/frontend/src/components/Nav/navbar.css
+++ b/backend/frontend/src/components/Nav/navbar.css
@@ -1,9 +1,17 @@
 .navbar-custom-css{
     min-height: 70px;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
 .logo-text{
     font-size: 30px;
     text-decoration: none;
     color: black;
+}
+
+.navbar-positioning{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
