--- a/backend/frontend/src/index.css
+++ b/backend/frontend/src/index.css
@@ -1,3 +1,7 @@
 .container-spacing{
-    padding-top: 70px;
+    /* padding-top: 70px; */
+    /* position: absolute; */
+    /* position: relative; */
+    /* top: 70px; */
+    /* margin-top: 70px; */
 }
