--- a/backend/frontend/src/components/Home/home.css
+++ b/backend/frontend/src/components/Home/home.css
@@ -7,3 +7,13 @@
     transition: transform 0.3s ease;
     transform: scale(1.05); 
 }
+
+.animated-long:hover{
+    cursor: pointer;
+    fill: green;
+}
+
+.footer-div{
+    position: relative;
+    bottom: 0;
+}
