--- a/backend/frontend/src/components/Nav/navbar.css
+++ b/backend/frontend/src/components/Nav/navbar.css
@@ -12,6 +12,8 @@
 .navbar-positioning{
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
-    z-index: 100;
+    min-height: 70px;
+    top: 0 !important;
+    z-index: 1000;
+    
 }
