stock.ai logo. now work on fonts

--- a/backend/frontend/src/components/Home/home.css
+++ b/backend/frontend/src/components/Home/home.css
@@ -33,6 +33,6 @@
     color: black;
 }
 
-/* .welcome-div{
-    background-color: rgb(0, 132, 31);
-} */
+.welcome-div{
+    background-color: #126bc5
+}
