fix icon resizing

--- a/backend/frontend/src/components/Home/home.css
+++ b/backend/frontend/src/components/Home/home.css
@@ -21,11 +21,16 @@
     min-height: 288px;
 }
 
+.paragraphs-home{
+    position: relative;
+}
+
 .active {
-    display: block;
+    position: relative;
 }
 
 .inactive {
+    position: relative;
     display: none;
 }
 
